# EduSphere

./: EduSphere Presentation.pptx  README.md
EduSphere/: CMakeLists.txt
EduSphere/code/: ansi_codes.h  main.c  main_interface.c  main_interface.h
EduSphere/code/Eliminations/: eliminations.c  eliminations.h
EduSphere/code/admins/: admin_interface.c  admin_interface.h
EduSphere/code/attendence/: attendence.c  attendence.h
EduSphere/code/authentification/: auth.c  auth.h
EduSphere/code/notifications/: notification.c  notification.h
EduSphere/code/student/: student_interface.c  student_interface.h
EduSphere/code/teacher/: teacher_interface.c  teacher_interface.h
EduSphere/code/utilities/: utilities.c  utilities.h
EduSphere/data/: TeacherSchedules.txt  absences.txt  admins.txt  assignments.txt  attendance.txt  colleges.txt  eleminated.txt  grades.txt  notifications.txt  registration.txt  regitration.txt  schedules.txt  students.txt  submitted_assignments.txt  teachers.txt
